--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
       id="tzInput"
       list="tzList"
       placeholder="例: Asia/Tokyo"
-      style="width:240px;"
+      style="width:200px;"
     >
     <datalist id="tzList">
-      <option value="Asia/Tokyo">         <!-- 日本標準時（東京） -->
-      <option value="Asia/Kolkata">       <!-- インド標準時（デリー） --> 
-      <option value="Africa/Cairo">       <!-- 東ヨーロッパ時間（カイロ） -->
-      <option value="Europe/London">      <!-- グリニッジ標準時／英国夏時間（ロンドン） -->
-      <option value="America/New_York">   <!-- 東部標準時／夏時間（ワシントンD.C.） -->
+      <option value="UTC">
+      <option value="Asia/Tokyo">
+      <option value="Europe/London">
+      <option value="America/New_York">
+      <option value="Asia/Shanghai">
+      <option value="Australia/Sydney">
+      <!-- ここに候補を増やしてもOK -->
     </datalist>
     <span id="error"></span>
   </div>
@@ -52,39 +54,44 @@
 
   <script>
   (function(){
-    const elClock     = document.getElementById('clock');
-    const elInput     = document.getElementById('tzInput');
-    const elError     = document.getElementById('error');
-    const weekClasses = ['sun','mon','tue','wed','thu','fri','sat'];
-    const weekJP      = ['日','月','火','水','木','金','土'];
+    const elClock    = document.getElementById('clock');
+    const elInput    = document.getElementById('tzInput');
+    const elError    = document.getElementById('error');
+    const weekClasses= ['sun','mon','tue','wed','thu','fri','sat'];
+    const weekJP     = ['日','月','火','水','木','金','土'];
 
-    // デフォルトは東京
-    let timeZone  = 'Asia/Tokyo';
+    // デフォルトタイムゾーン
+    let timeZone = 'Asia/Tokyo';
     let formatter = createFormatter(timeZone);
+
+    // 入力欄の初期値
     elInput.value = timeZone;
 
+    // タイムゾーン文字列からIntl.DateTimeFormatを作成
     function createFormatter(tz){
       return new Intl.DateTimeFormat('ja-JP', {
         timeZone: tz,
-        year:     'numeric',
-        month:    'numeric',
-        day:      'numeric',
-        hour:     'numeric',
-        minute:   'numeric',
-        weekday:  'short'
+        year:    'numeric',
+        month:   'numeric',
+        day:     'numeric',
+        hour:    'numeric',
+        minute:  'numeric',
+        weekday: 'short'
       });
     }
 
+    // ユーザーが入力を確定したら（フォーカスアウト or Enter）
     function onTimeZoneChange(){
       const tz = elInput.value.trim();
       try {
+        // 試しにフォーマッタを作ってみる
         const f = createFormatter(tz);
-        timeZone  = tz;
+        timeZone = tz;
         formatter = f;
         elError.textContent = '';
         updateClock(true);
       }
-      catch {
+      catch(e){
         elError.textContent = '無効なタイムゾーンです';
       }
     }
@@ -92,25 +99,26 @@
     elInput.addEventListener('change', onTimeZoneChange);
     elInput.addEventListener('blur',   onTimeZoneChange);
     elInput.addEventListener('keydown', e => {
-      if (e.key === 'Enter') onTimeZoneChange();
+      if(e.key === 'Enter') onTimeZoneChange();
     });
 
     let lastDisplay = '';
     function updateClock(force){
-      const now   = new Date();
-      const parts = formatter.formatToParts(now);
+      const now    = new Date();
+      const parts  = formatter.formatToParts(now);
       let Y,M,D,h,m,w;
-      parts.forEach(p => {
-        if (p.type==='year')    Y = p.value;
-        if (p.type==='month')   M = p.value;
-        if (p.type==='day')     D = p.value;
-        if (p.type==='hour')    h = p.value;
-        if (p.type==='minute')  m = p.value;
-        if (p.type==='weekday') w = p.value;  // "日"～"土"
+
+      parts.forEach(p=>{
+        if(p.type==='year')    Y = p.value;
+        if(p.type==='month')   M = p.value;
+        if(p.type==='day')     D = p.value;
+        if(p.type==='hour')    h = p.value;
+        if(p.type==='minute')  m = p.value;
+        if(p.type==='weekday') w = p.value;  // "日"～"土"
       });
 
       const text = `${Y}年${M}月${D}日(${w}) ${h}時${m}分`;
-      if (force || text !== lastDisplay){
+      if(force || text !== lastDisplay){
         lastDisplay = text;
         elClock.textContent = text;
         const idx = weekJP.indexOf(w);
@@ -118,6 +126,7 @@
       }
     }
 
+    // 初回と毎秒
     updateClock(true);
     setInterval(() => updateClock(false), 1000);
   })();
