--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>固定オフセット・クロック</title>
+  <title>クロック</title>
   <style>
     body {
       font-family: sans-serif;
@@ -29,8 +29,8 @@
   <div id="controls">
     <label for="timezone">タイムゾーン：</label>
     <select id="timezone">
+  　　<option value="Asia/Tokyo">日本（東京） UTC+9</option>
       <option value="UTC">UTC (協定世界時)</option>
-      <option value="Asia/Tokyo">日本（東京） UTC+9</option>
       <option value="Asia/Kolkata">インド（デリー） UTC+5:30</option>
       <option value="Africa/Cairo">エジプト（カイロ） UTC+2</option>
       <option value="America/New_York">米国東部標準時 UTC–5</option>
